[4단계 - 동시성 확장하기] 루키(김준하) 미션 제출합니다. (#1015)