@@ -1,11 +1,9 @@
 package org.apache.catalina.mapper;
 
-import com.techcourse.handler.DefaultController;
-import com.techcourse.handler.LoginController;
-import com.techcourse.handler.RegisterController;
-import com.techcourse.handler.RootController;
-import java.util.Collections;
-import java.util.HashMap;
+import com.techcourse.controller.DefaultController;
+import com.techcourse.controller.LoginController;
+import com.techcourse.controller.RegisterController;
+import com.techcourse.controller.RootController;
 import java.util.Map;
 import org.apache.catalina.controller.Controller;
 import org.apache.catalina.request.ServletRequest;
@@ -16,12 +14,11 @@ public class RequestMapping {
     private static final DefaultController DEFAULT_CONTROLLER;
 
     static {
-        final Map<String, Controller> mappings = new HashMap<>();
-        mappings.put("/", new RootController());
-        mappings.put("/login", new LoginController());
-        mappings.put("/register", new RegisterController());
-
-        MAPPINGS = Collections.unmodifiableMap(mappings);
+        MAPPINGS = Map.of(
+                "/", new RootController(),
+                "/login", new LoginController(),
+                "/register", new RegisterController()
+        );
         DEFAULT_CONTROLLER = new DefaultController();
     }
 
